log/build_2024-09-25_11-32-23/assignment_2_pkg/stderr.log
  File "/home/Gruppe4/ros2_ws/install/assignment_2_pkg/lib/python3.10/site-packages/assignment_2_pkg/wall_follower.py", line 30
    self.get_logger().info(str(msg.ranges)))
                                           ^
SyntaxError: unmatched ')'

